# aircraft-data-hierarchy

./: CONTRIBUTING.md  README.md  build.sh  pyproject.toml
.github/workflows/: python-package.yml  sphinx-docs.yml  test-package.yml
DAVEMLTest/: ADH_json_dump_test.py  engine_deck_ADH_dump_test.py  engine_deck_copier.py  n3cc_engine_deck.json  test.py  testing.json
DAVEMLTest/output_files/: adh_in.json  engine_deck_ADH_dump_test.json
DAVEMLTest/outputs_files/: adh_in.json
DAVEMLTest/utils/: generate_demo_adh.py
MichiganFinalPropulsionDemo/: ADH_to_pycycle_and_aviary_walkthrough.ipynb  step1_create_adh.py  step234_run_pycycle.py  step2abc_run_pycycle.py  step2d_run_aviary_ADH.py  step5and6_run_pycycle.py  step6_jsontoADH.py  step91011_run_pycycle.py
MichiganFinalPropulsionDemo/output_files/: pycycle_engine.json  pycycle_engine2.json  step12_adh.json  step1_adh.json  step2_adh.json  step5_adh.json  step6_adh.json
MichiganFinalPropulsionDemo/utils/: ADH_JSON_tools.py  generate_demo_adh.py
PropulsionDemo/: generate_demo_adh.py  hbtf_ADH_demo.py  pycycle_engine_sample.json
PropulsionDemo/utils/: generate_demo_adh.py
demos/NacelleDemo/: Nacelle_Demo.ipynb  aircraft_data_hierarchy_aliases.txt  aircraft_system.json
demos/PropulsionDemo/: step1_create_adh.py  step234_run_pycycle.py  step5_extract_deck_aviary.py  step91011_run_pycycle.py
demos/PropulsionDemo/output_files/: engine_deck_for_Aviary.json  (+3 more)
demos/SystemsDemo/: System_Demo.ipynb  Vehicle_Systems.py
docs/source/: conf.py  index.rst
src/aircraft_data_hierarchy/: behavior.py  common_base_model.py
(+36 files in other folders)
